# anyrun-hyprland-window-switcher

./: Cargo.toml  flake.nix
nix/: overlay.nix
src/: lib.rs  scrubber.rs
