[package]
name = "anyrun-hyprland-window-switcher"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Required to build a dynamic library that can be loaded by anyrun

[dependencies]
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
abi_stable = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fuzzy-matcher = "0.3.7"
ron = "0.8.0"
nix = { version = "0.26.1", default-features = false, features = ["process"] }
libc = "0.2"
